# flingoos-desktop-service

./: .gitignore  ARCHITECTURE_UPDATE_SUMMARY.md  FORGE_INTEGRATION_SUMMARY.md  GUIDE_DISPLAY_SUCCESS.md  PDF_GENERATION_SUCCESS.md  README.md  REAL_FIRESTORE_SUCCESS.md  ROADMAP.html  UI_CLEANUP_SUCCESS.md  architecture-diagram.mmd  pyproject.toml  requirements.txt  run_desktop_service.py  run_web_ui.py  sequence-diagram.mmd  trigger_13be52da-97ac-42b7-9347-dc54d301956e.json  trigger_36effe94-3760-4b8d-aa11-29161a3cfe05.json  trigger_400f7cd8-db44-43b7-bbc7-cad56fdee192.json  trigger_47800290-2fcd-4de3-bd6a-68ac0839208f.json  trigger_4f923654-1927-4576-b698-660425fa9022.json  trigger_67cd626f-fe6a-4af5-b648-8a4f29b6f90b.json  trigger_6aa4c24c-72a2-4fb1-9b60-e886d6eb5c72.json  trigger_7f9dd5ec-24d6-4182-9456-bc7f9dcae0c0.json  trigger_97857d65-8943-4a37-bc0e-2cd573ccb1d3.json  trigger_97fa6e17-7428-4b33-8b6b-dc8913ec4ae2.json  trigger_da67964c-56bb-43d7-9318-8061a7504456.json  trigger_db35c286-e6bf-465a-880e-95ae748cdea7.json  trigger_e7ee5f43-3e0b-44ff-a8f6-43e16a760abf.json  trigger_fcf80a29-f626-4b91-9649-54a3d2285ac0.json
OLD_DOCS/: MARKDOWN_DISPLAY_SUCCESS.md  REAL_FIRESTORE_INTEGRATION_SUMMARY.md  ROADMAP.html  WEB_UI_FIXES_SUMMARY.md
mock_firestore/organizations/diligent4/workflows/13be52da-97ac-42b7-9347-dc54d301956e/: workflow.json
mock_firestore/organizations/diligent4/workflows/36effe94-3760-4b8d-aa11-29161a3cfe05/: workflow.json
mock_firestore/organizations/diligent4/workflows/400f7cd8-db44-43b7-bbc7-cad56fdee192/: workflow.json
mock_firestore/organizations/diligent4/workflows/47800290-2fcd-4de3-bd6a-68ac0839208f/: workflow.json
mock_firestore/organizations/diligent4/workflows/4f923654-1927-4576-b698-660425fa9022/: workflow.json
mock_firestore/organizations/diligent4/workflows/67cd626f-fe6a-4af5-b648-8a4f29b6f90b/: workflow.json
mock_firestore/organizations/diligent4/workflows/6aa4c24c-72a2-4fb1-9b60-e886d6eb5c72/: workflow.json
mock_firestore/organizations/diligent4/workflows/7f9dd5ec-24d6-4182-9456-bc7f9dcae0c0/: workflow.json
mock_firestore/organizations/diligent4/workflows/97857d65-8943-4a37-bc0e-2cd573ccb1d3/: workflow.json
mock_firestore/organizations/diligent4/workflows/97fa6e17-7428-4b33-8b6b-dc8913ec4ae2/: workflow.json
mock_firestore/organizations/diligent4/workflows/da67964c-56bb-43d7-9318-8061a7504456/: workflow.json
src/desktop_service/: __init__.py  __main__.py  main.py
src/desktop_service/bridge_client/: __init__.py  command_client.py
src/desktop_service/forge/: __init__.py  firestore_client.py  mock_forge.py  trigger_generator.py
src/desktop_service/ui/: __init__.py  web_server.py
tests/: test_complete_workflow.py  validate_functionality.py
(+5 files in other folders)
